trigger/main/default/objects/Account/fields/Backup__c.field-meta.xml
<CustomField>
    <fullName>Backup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Backup</label>
    <type>Checkbox</type>
</CustomField>