trigger/main/default/objects/Account/fields/FD_External_ID__c.field-meta.xml
<CustomField>
    <fullName>FD_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>FD External ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>