trigger/main/default/objects/Account/fields/File_Status__c.field-meta.xml
<CustomField>
    <fullName>File_Status__c</fullName>
    <label>File Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SUCCESS</fullName>
                <default>true</default>
                <label>SUCCESS</label>
            </value>
            <value>
                <fullName>FAILED</fullName>
            </value>
            <value>
                <fullName>DELETED</fullName>
            </value>
            <value>
                <fullName>NOT ATTEMPTED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>