trigger/main/default/objects/Account/fields/FlexRelease__c.field-meta.xml
<CustomField>
    <fullName>FlexRelease__c</fullName>
    <displayFormat>FD9.0.0.10.{0}</displayFormat>
    <label>FlexRelease</label>
    <type>AutoNumber</type>
</CustomField>