trigger/main/default/objects/Account/fields/New_Branch__c.field-meta.xml
<CustomField>
    <fullName>New_Branch__c</fullName>
    <label>New Branch</label>
    <length>10</length>
    <type>Text</type>
</CustomField>