trigger/main/default/objects/Account/recordTypes/HDFC.recordType-meta.xml
<RecordType>
    <fullName>HDFC</fullName>
    <active>true</active>
    <label>HDFC</label>
</RecordType>