trigger/main/default/objects/Account/recordTypes/SBI.recordType-meta.xml
<RecordType>
    <fullName>SBI</fullName>
    <active>true</active>
    <label>SBI</label>
</RecordType>