trigger/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.RATING</columns>
    <columns>ACCOUNT.TICKER</columns>
    <columns>FD_External_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>